// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book Card Snapshot should render correctly 1`] = `
<div
  className="col mb-5"
  role="bookCard"
>
  <div
    className="card h-100"
  >
    <img
      className="card-img-top"
    />
    <div
      className="card-body p-4"
    >
      <div
        className="text-center"
      >
        <h5
          className="fw-bolder"
        />
        <span>
          $
        </span>
      </div>
    </div>
    <div
      className="card-footer p-4 pt-0 border-top-0 bg-transparent"
    >
      <div
        className="text-center"
      >
        <a
          className="btn btn-outline-dark mt-auto"
          href="/undefined"
          onClick={[Function]}
          role="moreInfo"
        >
          More Info
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Book Card Snapshot should render correctly when has book info 1`] = `
<div
  className="col mb-5"
  role="bookCard"
>
  <div
    className="card h-100"
  >
    <img
      alt="Fake book name"
      className="card-img-top"
      src="http://image.url"
    />
    <div
      className="card-body p-4"
    >
      <div
        className="text-center"
      >
        <h5
          className="fw-bolder"
        >
          Fake book name
        </h5>
        <span>
          $
          3
        </span>
      </div>
    </div>
    <div
      className="card-footer p-4 pt-0 border-top-0 bg-transparent"
    >
      <div
        className="text-center"
      >
        <a
          className="btn btn-outline-dark mt-auto"
          href="/0"
          onClick={[Function]}
          role="moreInfo"
        >
          More Info
        </a>
      </div>
    </div>
  </div>
</div>
`;
